--- a/Kurs1125/MainWindow.xaml
+++ b/Kurs1125/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kurs1125"
         mc:Ignorable="d"
-        Title="Диспетчер Такси" d:Width="500" d:Height="400" MaxHeight="420" MaxWidth="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#FFEEC798" Width="430">
+        Title="Диспетчер Такси" d:Width="500" d:Height="400" MaxHeight="420" MaxWidth="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#FFEEC798" Width="934">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -19,9 +19,6 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-
-        <Image x:Name="fon" Grid.Column="1" Margin="0,10,-398,0" Stretch="Fill" Source="pack://siteoforigin:,,,/fon-vizitki-taksi-26.jpg" Grid.ColumnSpan="2"/>
 
 
         <DockPanel>
@@ -86,6 +83,16 @@
                 </TransformGroup>
             </Line.RenderTransform>
         </Line>
+        <Image Grid.Column="1" Margin="239,225,-141,10" Stretch="Fill" Source="pack://siteoforigin:,,,/75780.png" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" Width="150" Height="150">
+            <Image.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.211"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Image.RenderTransform>
+        </Image>
 
 
     </Grid>
