--- a/Kurs1125/pages/EditZakazi.xaml
+++ b/Kurs1125/pages/EditZakazi.xaml
@@ -15,22 +15,18 @@
             <RowDefinition Height="auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <DatePicker x:Name="datePicker"
-              SelectedDate="01/01/22"
-              SelectedDateFormat="Long" Margin="220,18,41,395" Grid.Row="1"/>
 
-        <Button Content="Сохранить" Command="{Binding SaveZakazi}" Background="#FFF1ED94" Margin="70,376,70,37" Grid.Row="1"/>
-        <TextBlock Margin="10,20,280,397" Grid.Row="1" ><Run Language="ru-ru" Text="Заявка поступила"/></TextBlock>
-        <TextBlock Margin="10,65,280,355" Grid.Row="1" ><Run Text="Адрес"/><Run Text=" "/><Run Language="ru-ru" Text="заявки"/></TextBlock>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="112,65,58,347" Grid.Row="1"/>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="112,107,59,304" Grid.Row="1"/>
-        <TextBox  RenderTransformOrigin="-0.14,0.517" Margin="160,146,58,266" Grid.Row="1"/>
-        <TextBlock Margin="10,150,242,256" Grid.Row="1" ><Run Language="ru-ru" Text="Номер телефона клиента"/></TextBlock>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="83,193,155,219" Grid.Row="1"/>
-        <TextBlock Grid.Row="1" Text="Стоимсть" Margin="10,193,317,219" />
-        <TextBlock Margin="10,107,284,313" Grid.Row="1" ><Run Text="Адрес"/><Run Text=" "/><Run Language="ru-ru" Text="доставки"/></TextBlock>
-        <TextBlock Margin="123,16,155,397" Grid.Row="1" />
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="112,18,174,395" Grid.Row="1"/>
+        <Button Content="Сохранить" Command="{Binding SaveZakazi}" Background="#FFF1ED94" Margin="69,350,120,63" Grid.Row="1"/>
+        <TextBlock Margin="10,20,280,397" Grid.Row="1" FontSize="18" ><Run Language="ru-ru" Text="Заявка поступила"/></TextBlock>
+        <TextBlock Margin="10,109,313,311" Grid.Row="1" FontSize="18" ><Run Text="Адрес"/><Run Text=" "/><Run Language="ru-ru" Text="заявки"/></TextBlock>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="160,101,94,311" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="160,146,94,265" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="111,190,184,222" Grid.Row="1"/>
+        <TextBlock Grid.Row="1" Text="Стоимсть" Margin="10,190,350,222" RenderTransformOrigin="0.463,1.582" FontSize="18" />
+        <TextBlock Margin="8,151,296,270" Grid.Row="1" FontSize="18" ><Run Text="Адрес"/><Run Text=" "/><Run Language="ru-ru" Text="доставки"/></TextBlock>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="160,18,91,395" Grid.Row="1"/>
+        <TextBlock Margin="8,65,284,352" Grid.Row="1" FontSize="18" ><Run Language="ru-ru" Text="Заявку приняли"/></TextBlock>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="160,61,91,352" Grid.Row="1"/>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
