--- a/Kurs1125/pages/ViewZakazi.xaml
+++ b/Kurs1125/pages/ViewZakazi.xaml
@@ -13,14 +13,14 @@
             <ColumnDefinition Width="auto" MinWidth="0"/>
             <ColumnDefinition Width="auto" MinWidth="8.351"/>
         </Grid.ColumnDefinitions>
-        <ListView ItemsSource="{Binding Zakazi}" Margin="220,30,89,-321" Grid.Row="2">
+        <ListView ItemsSource="{Binding Zakazis}" Margin="220,30,89,-321" Grid.Row="2">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Время получения"  DisplayMemberBinding="{Binding Dtincome}"/>
-                    <GridViewColumn Header="Время назначения"  DisplayMemberBinding="{Binding Dtdestination}"/>
-                    <GridViewColumn Header="Место отправления"  DisplayMemberBinding="{Binding Destination}"/>
-                    <GridViewColumn Header="Место назначения"  DisplayMemberBinding="{Binding Pod}"/>
-                    <GridViewColumn Header="Стоимость"  DisplayMemberBinding="{Binding Price}"/>
+                    <GridViewColumn Header="Время получения" DisplayMemberBinding="{Binding Dtincome}"/>
+                    <GridViewColumn Header="Время назначения" DisplayMemberBinding="{Binding Dtdestination}"/>
+                    <GridViewColumn Header="Место отправления" DisplayMemberBinding="{Binding Destination}"/>
+                    <GridViewColumn Header="Место назначения" DisplayMemberBinding="{Binding Pod}"/>
+                    <GridViewColumn Header="Стоимость" DisplayMemberBinding="{Binding Price}"/>
                 </GridView>
             </ListView.View>
         </ListView>
