--- a/Kurs1125/App.xaml
+++ b/Kurs1125/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="Kurs1125.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Kurs1125"
-             StartupUri="Auth.xaml">
+             xmlns:local="clr-namespace:Kurs1125">
+    <!--StartupUri="Auth.xaml"-->
     <Application.Resources>
          
     </Application.Resources>
