--- a/Kurs1125/pages/EditVoditel.xaml
+++ b/Kurs1125/pages/EditVoditel.xaml
@@ -7,7 +7,7 @@
       mc:Ignorable="d" MaxHeight="900" MaxWidth="450" ResizeMode="NoResize"
       Title="Добавление Водителя" Height="488" Width="372">
 
-    <Grid Background="#FFF5C68E">
+    <Grid DataContext="{Binding EditVoditel}" Background="#FFF5C68E">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -15,7 +15,7 @@
             <RowDefinition/>
 
         </Grid.RowDefinitions>
-        <Line Stretch="Fill" Stroke="#FF493F3F" X2="1" Margin="125,50,181,384" Grid.Row="1" RenderTransformOrigin="0.5,0.5">
+        <Line Stretch="Fill" Stroke="#FF493F3F" X2="1" Margin="110,44,184,390" Grid.Row="1" RenderTransformOrigin="0.5,0.5">
             <Line.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -27,17 +27,15 @@
         </Line>
         <Button Content="Сохранить" Command="{Binding SaveVoditel}" Background="#FFF1ED94" Margin="70,413,70,0" Grid.Row="1"/>
         <TextBlock Margin="0,20,332,396" Grid.Row="1" ><Run Language="ru-ru" Text="Фамилия"/></TextBlock>
-        <TextBlock Margin="0,73,337,343" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Отчество"/></TextBlock>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Height="20" Margin="57,20,230,395" Grid.Row="1"/>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="58,45,230,371" Grid.Row="1"/>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="58,73,230,343" Grid.Row="1"/>
-        <TextBlock Margin="0,45,356,371" Grid.Row="1" ><Run Language="ru-ru" Text="Имя"/></TextBlock>
-        <TextBlock Margin="170,17,110,398" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Марка автомобиля"/></TextBlock>
-        <TextBlock Margin="170,42,115,373" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Цвет"/><Run Text=" автомобиля"/></TextBlock>
-        <TextBlock Margin="170,70,155,345" Grid.RowSpan="2" ><Run Language="ru-ru" Text="ГОС номер"/></TextBlock>
-        <TextBox  RenderTransformOrigin="-0.14,0.517" Margin="283,17,19,400" Grid.Row="1"/>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="283,42,20,375" Grid.Row="1"/>
-        <TextBox  RenderTransformOrigin="-0.14,0.517" Margin="282,72,20,345" Grid.Row="1"/>
+        <TextBox Text="{Binding FName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="57,20,248,395" Grid.Row="1"/>
+        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="57,57,248,359" Grid.Row="1"/>
+        <TextBlock Margin="0,57,356,359" Grid.Row="1" ><Run Language="ru-ru" Text="Имя"/></TextBlock>
+        <TextBlock Margin="158,16,121,399" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Марка автомобиля"/></TextBlock>
+        <TextBlock Margin="158,41,127,374" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Цвет"/><Run Text=" автомобиля"/></TextBlock>
+        <TextBlock Margin="162,66,162,349" Grid.RowSpan="2" ><Run Language="ru-ru" Text="ГОС номер"/></TextBlock>
+        <TextBox Text="{Binding Mcar}" RenderTransformOrigin="-0.14,0.517" Margin="269,16,33,401" Grid.Row="1"/>
+        <TextBox Text="{Binding Ncar}" RenderTransformOrigin="-0.14,0.517" Margin="269,41,34,376" Grid.Row="1"/>
+        <TextBox Text="{Binding Ncar}" RenderTransformOrigin="-0.14,0.517" Margin="268,66,34,351" Grid.Row="1"/>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
