--- a/Kurs1125/pages/EditVoditel.xaml
+++ b/Kurs1125/pages/EditVoditel.xaml
@@ -25,7 +25,7 @@
                 </TransformGroup>
             </Line.RenderTransform>
         </Line>
-        <Button Content="Сохранить" Command="{Binding SaveVoditel}" Background="#FFF1ED94" Margin="70,413,70,0" Grid.Row="1"/>
+        <Button Content="Сохранить" Command="{Binding SaveVoditel}" Background="#FFF1ED94" Margin="70,413,70,0" Grid.Row="1" Click="Button_Click"/>
         <TextBlock Margin="0,20,332,396" Grid.Row="1" ><Run Language="ru-ru" Text="Фамилия"/></TextBlock>
         <TextBox Text="{Binding EditVoditel.Fname}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="57,20,248,395" Grid.Row="1"/>
         <TextBox Text="{Binding EditVoditel.Lname}" RenderTransformOrigin="-0.14,0.517" Margin="57,57,248,359" Grid.Row="1"/>
